# whisper-wrapper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  RELEASE.md  THIRD_PARTY_LICENSES  build_deb.sh  pyproject.toml  requirements-ci.txt  requirements-cpu.txt  requirements.txt  trigger.py
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py
src/: __init__.py  config.py  hotkeys.py  injector.py  ipc_server.py  logging_utils.py  meta.py
src/app/: __init__.py  __main__.py  actions.py  recording.py  runtime.py  workers.py
src/audio/: __init__.py  callback.py  chunks.py  devices.py  recorder.py  stream.py  vad.py
src/model/: __init__.py  cache.py  device_selection.py  models.py  transcriber.py
src/system/: __init__.py  cuda.py  lock.py
src/ui/: __init__.py  icons.py  overlay.py  overlay_state.py  overlay_ui.py  overlay_widget.py  settings.py  settings_groups.py  themes.py  tray.py
tests/: test_audio_chunks.py  test_config.py  test_display_server.py  test_model_cache.py  test_overlay_state.py
